スタイルの設定

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
       <p class="ali-L">
         私たちのコンテンツは、目的を達成するためのプロセスを考える論理的思考力や目的をイメージして表現する創造力、問題を発見し思考錯誤して解決する課題解決能力等の能力を育てることを目的としています。これらの能力(プログラミング的思考)を身に付けることが今回のプログラミング必修化の目的であると判断し、その目的に適したコンテンツになるよう意識した活動を行なっています。
       </p>
-      <video src="./video/prom_video.mp4"></video>
+      <video src="./video/prom_video.mp4" controls></video>
     </div>
 
     <h2>コンテンツ紹介</h2>
